[gd_scene load_steps=25 format=2]

[ext_resource path="res://scripts/CombatScreen.gd" type="Script" id=1]
[ext_resource path="res://scenes/ChangeSceneButton.tscn" type="PackedScene" id=2]
[ext_resource path="res://images/terrain/dirt.png" type="Texture" id=3]
[ext_resource path="res://images/terrain/grass.png" type="Texture" id=4]
[ext_resource path="res://images/terrain/sand.png" type="Texture" id=5]
[ext_resource path="res://images/terrain/stone.png" type="Texture" id=6]
[ext_resource path="res://scripts/TileMap.gd" type="Script" id=7]
[ext_resource path="res://images/terrain/jagged_borders.png" type="Texture" id=8]
[ext_resource path="res://images/terrain/blank_tile.png" type="Texture" id=9]
[ext_resource path="res://scripts/MovementOverlay.gd" type="Script" id=10]
[ext_resource path="res://scenes/combat/RoundCounter.tscn" type="PackedScene" id=11]
[ext_resource path="res://scripts/SelectedUnitInfo.gd" type="Script" id=12]
[ext_resource path="res://scenes/UIBackground.tscn" type="PackedScene" id=13]
[ext_resource path="res://images/portraits/cat image 1.jpg" type="Texture" id=14]
[ext_resource path="res://scripts/ItemButtonGridContainer.gd" type="Script" id=15]
[ext_resource path="res://scripts/UnitSelectionSidebarGrid.gd" type="Script" id=16]
[ext_resource path="res://scenes/SettingsButton.tscn" type="PackedScene" id=17]
[ext_resource path="res://scripts/EndTurnButton.gd" type="Script" id=18]
[ext_resource path="res://scripts/ScreenShake.gd" type="Script" id=19]
[ext_resource path="res://scripts/autoload/CombatObjectiveHandler.gd" type="Script" id=20]

[sub_resource type="TileSet" id=1]
0/name = "dirt.png 0"
0/texture = ExtResource( 3 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 32, 32 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shapes = [  ]
0/z_index = 0
1/name = "grass.png 1"
1/texture = ExtResource( 4 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 0, 0, 32, 32 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shapes = [  ]
1/z_index = 0
2/name = "sand.png 2"
2/texture = ExtResource( 5 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 0, 0, 32, 32 )
2/tile_mode = 1
2/autotile/bitmask_mode = 0
2/autotile/bitmask_flags = [  ]
2/autotile/icon_coordinate = Vector2( 0, 0 )
2/autotile/tile_size = Vector2( 32, 32 )
2/autotile/spacing = 0
2/autotile/occluder_map = [  ]
2/autotile/navpoly_map = [  ]
2/autotile/priority_map = [  ]
2/autotile/z_index_map = [  ]
2/occluder_offset = Vector2( 0, 0 )
2/navigation_offset = Vector2( 0, 0 )
2/shapes = [  ]
2/z_index = 0
3/name = "stone.png 3"
3/texture = ExtResource( 6 )
3/tex_offset = Vector2( 0, 0 )
3/modulate = Color( 1, 1, 1, 1 )
3/region = Rect2( 0, 0, 32, 32 )
3/tile_mode = 1
3/autotile/bitmask_mode = 0
3/autotile/bitmask_flags = [  ]
3/autotile/icon_coordinate = Vector2( 0, 0 )
3/autotile/tile_size = Vector2( 32, 32 )
3/autotile/spacing = 0
3/autotile/occluder_map = [  ]
3/autotile/navpoly_map = [  ]
3/autotile/priority_map = [  ]
3/autotile/z_index_map = [  ]
3/occluder_offset = Vector2( 0, 0 )
3/navigation_offset = Vector2( 0, 0 )
3/shapes = [  ]
3/z_index = 0

[sub_resource type="TileSet" id=2]
0/name = "jagged_borders.png 0"
0/texture = ExtResource( 8 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 96, 96 )
0/tile_mode = 1
0/autotile/bitmask_mode = 0
0/autotile/bitmask_flags = [  ]
0/autotile/icon_coordinate = Vector2( 0, 0 )
0/autotile/tile_size = Vector2( 32, 32 )
0/autotile/spacing = 0
0/autotile/occluder_map = [  ]
0/autotile/navpoly_map = [  ]
0/autotile/priority_map = [  ]
0/autotile/z_index_map = [  ]
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shapes = [  ]
0/z_index = 0
1/name = "jagged_borders.png 1"
1/texture = ExtResource( 8 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 32, 0, 32, 32 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shapes = [  ]
1/z_index = 0
2/name = "jagged_borders.png 2"
2/texture = ExtResource( 8 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 64, 0, 32, 32 )
2/tile_mode = 0
2/occluder_offset = Vector2( 0, 0 )
2/navigation_offset = Vector2( 0, 0 )
2/shapes = [  ]
2/z_index = 0
3/name = "jagged_borders.png 3"
3/texture = ExtResource( 8 )
3/tex_offset = Vector2( 0, 0 )
3/modulate = Color( 1, 1, 1, 1 )
3/region = Rect2( 0, 32, 32, 32 )
3/tile_mode = 0
3/occluder_offset = Vector2( 0, 0 )
3/navigation_offset = Vector2( 0, 0 )
3/shapes = [  ]
3/z_index = 0
4/name = "jagged_borders.png 4"
4/texture = ExtResource( 8 )
4/tex_offset = Vector2( 0, 0 )
4/modulate = Color( 1, 1, 1, 1 )
4/region = Rect2( 32, 32, 32, 32 )
4/tile_mode = 0
4/occluder_offset = Vector2( 0, 0 )
4/navigation_offset = Vector2( 0, 0 )
4/shapes = [  ]
4/z_index = 0
5/name = "jagged_borders.png 5"
5/texture = ExtResource( 8 )
5/tex_offset = Vector2( 0, 0 )
5/modulate = Color( 1, 1, 1, 1 )
5/region = Rect2( 64, 32, 32, 32 )
5/tile_mode = 0
5/occluder_offset = Vector2( 0, 0 )
5/navigation_offset = Vector2( 0, 0 )
5/shapes = [  ]
5/z_index = 0
6/name = "jagged_borders.png 6"
6/texture = ExtResource( 8 )
6/tex_offset = Vector2( 0, 0 )
6/modulate = Color( 1, 1, 1, 1 )
6/region = Rect2( 0, 64, 32, 32 )
6/tile_mode = 0
6/occluder_offset = Vector2( 0, 0 )
6/navigation_offset = Vector2( 0, 0 )
6/shapes = [  ]
6/z_index = 0
7/name = "jagged_borders.png 7"
7/texture = ExtResource( 8 )
7/tex_offset = Vector2( 0, 0 )
7/modulate = Color( 1, 1, 1, 1 )
7/region = Rect2( 32, 64, 32, 32 )
7/tile_mode = 0
7/occluder_offset = Vector2( 0, 0 )
7/navigation_offset = Vector2( 0, 0 )
7/shapes = [  ]
7/z_index = 0
8/name = "jagged_borders.png 8"
8/texture = ExtResource( 8 )
8/tex_offset = Vector2( 0, 0 )
8/modulate = Color( 1, 1, 1, 1 )
8/region = Rect2( 64, 64, 32, 32 )
8/tile_mode = 0
8/occluder_offset = Vector2( 0, 0 )
8/navigation_offset = Vector2( 0, 0 )
8/shapes = [  ]
8/z_index = 0

[sub_resource type="TileSet" id=3]
0/name = "movement_tile"
0/texture = ExtResource( 9 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 0.0470588, 0.0588235, 0.894118, 1 )
0/region = Rect2( 0, 0, 32, 32 )
0/tile_mode = 1
0/autotile/bitmask_mode = 0
0/autotile/bitmask_flags = [  ]
0/autotile/icon_coordinate = Vector2( 0, 0 )
0/autotile/tile_size = Vector2( 32, 32 )
0/autotile/spacing = 0
0/autotile/occluder_map = [  ]
0/autotile/navpoly_map = [  ]
0/autotile/priority_map = [  ]
0/autotile/z_index_map = [  ]
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shapes = [  ]
0/z_index = 0
1/name = "attack_tile"
1/texture = ExtResource( 9 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 0.866667, 0.0235294, 0.0235294, 1 )
1/region = Rect2( 0, 0, 32, 32 )
1/tile_mode = 1
1/autotile/bitmask_mode = 0
1/autotile/bitmask_flags = [  ]
1/autotile/icon_coordinate = Vector2( 0, 0 )
1/autotile/tile_size = Vector2( 32, 32 )
1/autotile/spacing = 0
1/autotile/occluder_map = [  ]
1/autotile/navpoly_map = [  ]
1/autotile/priority_map = [  ]
1/autotile/z_index_map = [  ]
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shapes = [  ]
1/z_index = 0

[sub_resource type="Animation" id=4]
resource_name = "ScreenShake"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.492636 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 3, 3 ), Vector2( 0, 0 ) ]
}

[node name="CombatScreen" type="Node2D"]
script = ExtResource( 1 )

[node name="ChangeSceneButton" parent="." instance=ExtResource( 2 )]
margin_left = 166.476
margin_top = 40.3143
margin_right = 276.476
margin_bottom = 85.3143
text = "Party Screen"

[node name="TileMap" type="TileMap" parent="." groups=[
"tilemap",
]]
tile_set = SubResource( 1 )
cell_size = Vector2( 32, 32 )
format = 1
tile_data = PoolIntArray( 327685, 1, 0, 327686, 1, 0, 327687, 1, 0, 327688, 1, 0, 327689, 1, 0, 327690, 1, 0, 327691, 1, 0, 327692, 1, 0, 327693, 1, 0, 327694, 1, 0, 327695, 1, 0, 327696, 1, 0, 327697, 1, 0, 327698, 1, 0, 327699, 1, 0, 327700, 1, 0, 327701, 1, 0, 327702, 1, 0, 327703, 1, 0, 327704, 1, 0, 327705, 1, 0, 327706, 1, 0, 393221, 1, 0, 393222, 1, 0, 393223, 1, 0, 393224, 1, 0, 393225, 1, 0, 393226, 1, 0, 393227, 1, 0, 393228, 1, 0, 393229, 1, 0, 393230, 1, 0, 393231, 1, 0, 393232, 1, 0, 393233, 1, 0, 393234, 1, 0, 393235, 1, 0, 393236, 1, 0, 393237, 1, 0, 393238, 1, 0, 393239, 1, 0, 393240, 1, 0, 393241, 1, 0, 393242, 1, 0, 458757, 1, 0, 458758, 1, 0, 458759, 1, 0, 458760, 1, 0, 458761, 1, 0, 458762, 1, 0, 458763, 1, 0, 458764, 1, 0, 458765, 1, 0, 458766, 1, 0, 458767, 1, 0, 458768, 1, 0, 458769, 1, 0, 458770, 1, 0, 458771, 1, 0, 458772, 1, 0, 458773, 1, 0, 458774, 1, 0, 458775, 1, 0, 458776, 1, 0, 458777, 1, 0, 458778, 1, 0, 524293, 1, 0, 524294, 1, 0, 524295, 1, 0, 524296, 2, 0, 524297, 2, 0, 524298, 2, 0, 524299, 2, 0, 524300, 2, 0, 524301, 2, 0, 524302, 1, 0, 524303, 1, 0, 524304, 1, 0, 524305, 1, 0, 524306, 1, 0, 524307, 1, 0, 524308, 1, 0, 524309, 1, 0, 524310, 1, 0, 524311, 1, 0, 524312, 1, 0, 524313, 1, 0, 524314, 1, 0, 589829, 1, 0, 589830, 2, 0, 589831, 2, 0, 589832, 2, 0, 589833, 2, 0, 589834, 2, 0, 589835, 2, 0, 589836, 2, 0, 589837, 2, 0, 589838, 2, 0, 589839, 2, 0, 589840, 2, 0, 589841, 2, 0, 589842, 2, 0, 589843, 2, 0, 589844, 2, 0, 589845, 2, 0, 589846, 2, 0, 589847, 2, 0, 589848, 2, 0, 589849, 2, 0, 589850, 1, 0, 655365, 2, 0, 655366, 2, 0, 655367, 2, 0, 655368, 2, 0, 655369, 2, 0, 655370, 2, 0, 655371, 2, 0, 655372, 2, 0, 655373, 2, 0, 655374, 2, 0, 655375, 2, 0, 655376, 2, 0, 655377, 2, 0, 655378, 2, 0, 655379, 2, 0, 655380, 2, 0, 655381, 2, 0, 655382, 2, 0, 655383, 2, 0, 655384, 2, 0, 655385, 2, 0, 655386, 2, 0, 720901, 3, 0, 720902, 3, 0, 720903, 3, 0, 720904, 3, 0, 720905, 3, 0, 720906, 3, 0, 720907, 3, 0, 720908, 3, 0, 720909, 3, 0, 720910, 3, 0, 720911, 3, 0, 720912, 3, 0, 720913, 3, 0, 720914, 3, 0, 720915, 3, 0, 720916, 3, 0, 720917, 3, 0, 720918, 3, 0, 720919, 3, 0, 720920, 3, 0, 720921, 3, 0, 720922, 3, 0, 786437, 3, 0, 786438, 3, 0, 786439, 3, 0, 786440, 3, 0, 786441, 3, 0, 786442, 3, 0, 786443, 3, 0, 786444, 3, 0, 786445, 3, 0, 786446, 3, 0, 786447, 3, 0, 786448, 3, 0, 786449, 3, 0, 786450, 3, 0, 786451, 3, 0, 786452, 3, 0, 786453, 3, 0, 786454, 3, 0, 786455, 3, 0, 786456, 3, 0, 786457, 3, 0, 786458, 3, 0, 851973, 0, 0, 851974, 0, 0, 851975, 0, 0, 851976, 0, 0, 851977, 0, 0, 851978, 0, 0, 851979, 0, 0, 851980, 0, 0, 851981, 0, 0, 851982, 0, 0, 851983, 0, 0, 851984, 0, 0, 851985, 0, 0, 851986, 0, 0, 851987, 0, 0, 851988, 0, 0, 851989, 0, 0, 851990, 0, 0, 851991, 0, 0, 851992, 0, 0, 851993, 0, 0, 851994, 0, 0, 917509, 0, 0, 917510, 0, 0, 917511, 0, 0, 917512, 0, 0, 917513, 0, 0, 917514, 0, 0, 917515, 0, 0, 917516, 0, 0, 917517, 0, 0, 917518, 0, 0, 917519, 0, 0, 917520, 0, 0, 917521, 0, 0, 917522, 0, 0, 917523, 0, 0, 917524, 0, 0, 917525, 0, 0, 917526, 0, 0, 917527, 0, 0, 917528, 0, 0, 917529, 0, 0, 917530, 0, 0, 983045, 0, 0, 983046, 0, 0, 983047, 0, 0, 983048, 0, 0, 983049, 0, 0, 983050, 0, 0, 983051, 0, 0, 983052, 0, 0, 983053, 0, 0, 983054, 0, 0, 983055, 0, 0, 983056, 0, 0, 983057, 0, 0, 983058, 0, 0, 983059, 0, 0, 983060, 0, 0, 983061, 0, 0, 983062, 0, 0, 983063, 0, 0, 983064, 0, 0, 983065, 0, 0, 983066, 0, 0, 1048581, 0, 0, 1048582, 0, 0, 1048583, 0, 0, 1048584, 0, 0, 1048585, 0, 0, 1048586, 0, 0, 1048587, 0, 0, 1048588, 0, 0, 1048589, 0, 0, 1048590, 0, 0, 1048591, 0, 0, 1048592, 0, 0, 1048593, 0, 0, 1048594, 0, 0, 1048595, 0, 0, 1048596, 0, 0, 1048597, 0, 0, 1048598, 0, 0, 1048599, 0, 0, 1048600, 0, 0, 1048601, 0, 0, 1048602, 0, 0 )
script = ExtResource( 7 )

[node name="JaggedBorders" type="TileMap" parent="."]
modulate = Color( 1, 1, 32.1216, 0.54902 )
tile_set = SubResource( 2 )
cell_size = Vector2( 32, 32 )
format = 1
tile_data = PoolIntArray( 327685, 0, 0, 327686, 0, 0, 327687, 1, 0, 327688, 0, 0, 327689, 0, 0, 327690, 0, 0, 327691, 0, 0, 327692, 0, 0, 327693, 0, 0, 327694, 0, 0, 327695, 0, 0, 327696, 0, 0, 327697, 0, 0, 327698, 0, 0, 327699, 0, 0, 327700, 1, 0, 327701, 1, 0, 327702, 0, 0, 327703, 0, 0, 327704, 0, 0, 327705, 0, 0, 327706, 0, 0, 393221, 0, 0, 393222, 0, 0, 393223, 0, 0, 393224, 0, 0, 393225, 0, 0, 393226, 0, 0, 393227, 0, 0, 393228, 1, 0, 393229, 0, 0, 393230, 0, 0, 393231, 0, 0, 393232, 0, 0, 393233, 1, 0, 393234, 0, 0, 393235, 0, 0, 393236, 1, 0, 393237, 0, 0, 393238, 0, 0, 393239, 0, 0, 393240, 0, 0, 393241, 0, 0, 393242, 0, 0, 458757, 0, 0, 458758, 0, 0, 458759, 0, 0, 458760, 0, 0, 458761, 0, 0, 458762, 0, 0, 458763, 0, 0, 458764, 0, 0, 458765, 0, 0, 458766, 0, 0, 458767, 0, 0, 458768, 0, 0, 458769, 0, 0, 458770, 1, 0, 458771, 1, 0, 458772, 0, 0, 458773, 0, 0, 458774, 1, 0, 458775, 1, 0, 458776, 1, 0, 458777, 0, 0, 458778, 0, 0, 524293, 0, 0, 524294, 0, 0, 524295, 1, 0, 524296, 0, 0, 524297, 0, 0, 524298, 1, 0, 524299, 0, 0, 524300, 1, 0, 524301, 0, 0, 524302, 1, 0, 524303, 0, 0, 524304, 0, 0, 524305, 0, 0, 524306, 1, 0, 524307, 0, 0, 524308, 0, 0, 524309, 0, 0, 524310, 0, 0, 524311, 0, 0, 524312, 0, 0, 524313, 0, 0, 524314, 0, 0, 589829, 0, 0, 589830, 0, 0, 589831, 0, 0, 589832, 0, 0, 589833, 0, 0, 589834, 0, 0, 589835, 0, 0, 589836, 0, 0, 589837, 0, 0, 589838, 1, 0, 589839, 0, 0, 589840, 0, 0, 589841, 0, 0, 589842, 0, 0, 589843, 0, 0, 589844, 0, 0, 589845, 0, 0, 589846, 0, 0, 589847, 0, 0, 589848, 0, 0, 589849, 1, 0, 589850, 0, 0, 655365, 0, 0, 655366, 0, 0, 655367, 0, 0, 655368, 0, 0, 655369, 0, 0, 655370, 0, 0, 655371, 0, 0, 655372, 1, 0, 655373, 0, 0, 655374, 0, 0, 655375, 0, 0, 655376, 0, 0, 655377, 0, 0, 655378, 0, 0, 655379, 0, 0, 655380, 0, 0, 655381, 0, 0, 655382, 0, 0, 655383, 0, 0, 655384, 0, 0, 655385, 0, 0, 655386, 0, 0, 720901, 0, 0, 720902, 0, 0, 720903, 0, 0, 720904, 0, 0, 720905, 0, 0, 720906, 0, 0, 720907, 1, 0, 720908, 1, 0, 720909, 0, 0, 720910, 0, 0, 720911, 1, 0, 720912, 0, 0, 720913, 0, 0, 720914, 0, 0, 720915, 0, 0, 720916, 0, 0, 720917, 1, 0, 720918, 0, 0, 720919, 0, 0, 720920, 0, 0, 720921, 0, 0, 720922, 0, 0, 786437, 0, 0, 786438, 0, 0, 786439, 0, 0, 786440, 1, 0, 786441, 1, 0, 786442, 0, 0, 786443, 0, 0, 786444, 0, 0, 786445, 0, 0, 786446, 0, 0, 786447, 0, 0, 786448, 0, 0, 786449, 0, 0, 786450, 0, 0, 786451, 0, 0, 786452, 0, 0, 786453, 0, 0, 786454, 0, 0, 786455, 0, 0, 786456, 0, 0, 786457, 0, 0, 786458, 0, 0, 851973, 0, 0, 851974, 0, 0, 851975, 0, 0, 851976, 0, 0, 851977, 0, 0, 851978, 0, 0, 851979, 1, 0, 851980, 0, 0, 851981, 0, 0, 851982, 1, 0, 851983, 0, 0, 851984, 0, 0, 851985, 0, 0, 851986, 0, 0, 851987, 1, 0, 851988, 0, 0, 851989, 0, 0, 851990, 0, 0, 851991, 0, 0, 851992, 0, 0, 851993, 0, 0, 851994, 0, 0, 917509, 0, 0, 917510, 0, 0, 917511, 0, 0, 917512, 0, 0, 917513, 0, 0, 917514, 0, 0, 917515, 1, 0, 917516, 0, 0, 917517, 1, 0, 917518, 0, 0, 917519, 0, 0, 917520, 0, 0, 917521, 0, 0, 917522, 0, 0, 917523, 0, 0, 917524, 1, 0, 917525, 0, 0, 917526, 0, 0, 917527, 0, 0, 917528, 0, 0, 917529, 0, 0, 917530, 0, 0, 983045, 0, 0, 983046, 0, 0, 983047, 0, 0, 983048, 0, 0, 983049, 0, 0, 983050, 0, 0, 983051, 0, 0, 983052, 0, 0, 983053, 0, 0, 983054, 0, 0, 983055, 0, 0, 983056, 0, 0, 983057, 0, 0, 983058, 1, 0, 983059, 0, 0, 983060, 0, 0, 983061, 0, 0, 983062, 0, 0, 983063, 0, 0, 983064, 0, 0, 983065, 0, 0, 983066, 0, 0, 1048581, 0, 0, 1048582, 0, 0, 1048583, 0, 0, 1048584, 0, 0, 1048585, 0, 0, 1048586, 0, 0, 1048587, 0, 0, 1048588, 0, 0, 1048589, 0, 0, 1048590, 0, 0, 1048591, 0, 0, 1048592, 0, 0, 1048593, 0, 0, 1048594, 0, 0, 1048595, 0, 0, 1048596, 0, 0, 1048597, 0, 0, 1048598, 0, 0, 1048599, 0, 0, 1048600, 0, 0, 1048601, 0, 0, 1048602, 0, 0 )

[node name="MovementAttackOverlay" type="TileMap" parent="."]
modulate = Color( 1, 1, 1, 0.584314 )
tile_set = SubResource( 3 )
cell_size = Vector2( 32, 32 )
format = 1
script = ExtResource( 10 )

[node name="RoundCounter" parent="." instance=ExtResource( 11 )]
position = Vector2( 12.83, 82.812 )

[node name="SelectedUnitInfo" type="Node2D" parent="."]
visible = false
position = Vector2( 500, 60 )
script = ExtResource( 12 )

[node name="UIBackground" parent="SelectedUnitInfo" instance=ExtResource( 13 )]

[node name="UnitClassLabel" type="Label" parent="SelectedUnitInfo"]
modulate = Color( 0, 0, 0, 1 )
margin_left = -57.6315
margin_top = -35.0
margin_right = -9.63153
margin_bottom = -21.0
text = "Class"

[node name="UnitHealthPointLabel" type="Label" parent="SelectedUnitInfo"]
modulate = Color( 0, 0, 0, 1 )
anchor_right = 0.3
margin_left = -58.6315
margin_top = -18.0
margin_right = -8.63153
margin_bottom = -4.0
text = "Health: "

[node name="UnitMovementPointLabel" type="Label" parent="SelectedUnitInfo"]
modulate = Color( 0, 0, 0, 1 )
margin_left = -57.6315
margin_top = -2.40398
margin_right = -17.5408
margin_bottom = 11.596
text = "AP: "

[node name="UnitXPLabel" type="Label" parent="SelectedUnitInfo"]
modulate = Color( 0, 0, 0, 1 )
anchor_right = 0.3
margin_left = -59.6841
margin_top = 13.5793
margin_right = -9.68414
margin_bottom = 27.5793
text = "Health: "

[node name="UnitLevelLabel" type="Label" parent="SelectedUnitInfo"]
modulate = Color( 0, 0, 0, 1 )
margin_left = -58.6841
margin_top = 29.1754
margin_right = -18.5934
margin_bottom = 43.1754
text = "AP: "

[node name="UnitNameLabel" type="Label" parent="SelectedUnitInfo"]
modulate = Color( 0, 0, 0, 1 )
margin_left = -188.748
margin_top = 17.3791
margin_right = -45.7476
margin_bottom = 43.3793
text = "Name"
align = 1
autowrap = true
clip_text = true

[node name="SelectedUnitAvatar" type="Sprite" parent="SelectedUnitInfo"]
position = Vector2( -115.89, -9.61026 )
scale = Vector2( 0.25, 0.25 )
z_index = 1
texture = ExtResource( 14 )

[node name="ItemButtonGridContainer" type="GridContainer" parent="SelectedUnitInfo"]
margin_left = 95.0
margin_top = -40.0
margin_right = 195.0
margin_bottom = 60.0
rect_scale = Vector2( 0.75, 0.75 )
columns = 2
script = ExtResource( 15 )

[node name="UnitSelectionSidebar" type="ScrollContainer" parent="."]
margin_left = 887.0
margin_top = 165.0
margin_right = 1008.0
margin_bottom = 547.0

[node name="UnitSelectionSidebarGrid" type="GridContainer" parent="UnitSelectionSidebar"]
script = ExtResource( 16 )

[node name="Settings" parent="." instance=ExtResource( 17 )]

[node name="UndoButton" type="Button" parent="."]
margin_left = 13.6362
margin_top = 460.611
margin_right = 132.636
margin_bottom = 507.611
hint_tooltip = "Undo last movement"
text = "Undo"

[node name="EndTurnButton" type="Button" parent="."]
margin_left = 13.6807
margin_top = 525.932
margin_right = 132.681
margin_bottom = 572.932
hint_tooltip = "End your turn"
text = "End Turn"
script = ExtResource( 18 )

[node name="ScreenShake" type="AnimationPlayer" parent="."]
anims/ScreenShake = SubResource( 4 )
script = ExtResource( 19 )

[node name="CombatObjectiveHandler" type="Node" parent="."]
script = ExtResource( 20 )

[node name="CombatObjectivesContainer" type="GridContainer" parent="CombatObjectiveHandler"]
margin_left = 4.0
margin_top = 139.0
margin_right = 155.0
margin_bottom = 448.0

[node name="UIBackground" parent="CombatObjectiveHandler/CombatObjectivesContainer" instance=ExtResource( 13 )]
self_modulate = Color( 0.513726, 0.92549, 0.647059, 1 )
margin_left = 0.0
margin_top = 0.0
margin_right = 150.0
margin_bottom = 30.0
rect_min_size = Vector2( 150, 30 )

[node name="RichTextLabel" type="RichTextLabel" parent="CombatObjectiveHandler/CombatObjectivesContainer/UIBackground"]
modulate = Color( 0, 0, 0, 1 )
margin_left = 12.7269
margin_top = 7.0
margin_right = 137.727
margin_bottom = 23.0
text = "Primary Objectives"

[node name="UIBackground3" parent="CombatObjectiveHandler/CombatObjectivesContainer" instance=ExtResource( 13 )]
margin_left = 0.0
margin_top = 34.0
margin_right = 150.0
margin_bottom = 64.0
rect_min_size = Vector2( 130, 30 )

[node name="RichTextLabel" type="RichTextLabel" parent="CombatObjectiveHandler/CombatObjectivesContainer/UIBackground3"]
modulate = Color( 0, 0, 0, 1 )
margin_left = 23.9633
margin_top = 8.5688
margin_right = 128.963
margin_bottom = 24.5688
text = "Protect Caravan"

[node name="UIBackground5" parent="CombatObjectiveHandler/CombatObjectivesContainer" instance=ExtResource( 13 )]
margin_left = 0.0
margin_top = 68.0
margin_right = 150.0
margin_bottom = 98.0
rect_min_size = Vector2( 130, 30 )

[node name="RichTextLabel" type="RichTextLabel" parent="CombatObjectiveHandler/CombatObjectivesContainer/UIBackground5"]
modulate = Color( 0, 0, 0, 1 )
margin_left = 22.8257
margin_top = 7.4312
margin_right = 127.826
margin_bottom = 23.4312
text = "Defeat Enemies"

[node name="UIBackground2" parent="CombatObjectiveHandler/CombatObjectivesContainer" instance=ExtResource( 13 )]
self_modulate = Color( 0.380392, 0.643137, 0.92549, 1 )
margin_left = 0.0
margin_top = 102.0
margin_right = 150.0
margin_bottom = 132.0
rect_min_size = Vector2( 130, 30 )

[node name="RichTextLabel" type="RichTextLabel" parent="CombatObjectiveHandler/CombatObjectivesContainer/UIBackground2"]
modulate = Color( 0, 0, 0, 1 )
margin_left = 8.0
margin_top = 8.0
margin_right = 140.0
margin_bottom = 24.0
text = "Optional Objectives"

[node name="UIBackground4" parent="CombatObjectiveHandler/CombatObjectivesContainer" instance=ExtResource( 13 )]
margin_left = 0.0
margin_top = 136.0
margin_right = 150.0
margin_bottom = 166.0
rect_min_size = Vector2( 130, 30 )

[node name="RichTextLabel" type="RichTextLabel" parent="CombatObjectiveHandler/CombatObjectivesContainer/UIBackground4"]
modulate = Color( 0, 0, 0, 1 )
margin_left = 28.1176
margin_top = 7.97061
margin_right = 130.118
margin_bottom = 23.9706
text = "Defeat Boss"
